--- a/python/notebook.ipynb
+++ b/python/notebook.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
     }
    ],
    "source": [
-    "full_run_df, params = eval.run(topics_all)\n"
+    "full_run_df, params = eval.run(topics_all)"
    ]
   },
   {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -177,20 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "recall_1000    0.5140\n",
-       "ndcg           0.4705\n",
-       "Rprec          0.2305\n",
-       "P_10           0.4250\n",
+       "recall_1000    0.6693\n",
+       "ndcg           0.5597\n",
+       "Rprec          0.2825\n",
+       "P_10           0.4333\n",
        "Name: training (12 topics), dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -244,29 +244,29 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>training (12 topics)</th>\n",
-       "      <td>0.5140</td>\n",
-       "      <td>0.4705</td>\n",
-       "      <td>0.2305</td>\n",
-       "      <td>0.425</td>\n",
+       "      <td>0.6693</td>\n",
+       "      <td>0.5597</td>\n",
+       "      <td>0.2825</td>\n",
+       "      <td>0.4333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>test (9 topics)</th>\n",
-       "      <td>0.6103</td>\n",
-       "      <td>0.5633</td>\n",
-       "      <td>0.3188</td>\n",
-       "      <td>0.600</td>\n",
+       "      <td>0.6292</td>\n",
+       "      <td>0.5858</td>\n",
+       "      <td>0.3580</td>\n",
+       "      <td>0.7000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      recall_1000    ndcg   Rprec   P_10\n",
-       "training (12 topics)       0.5140  0.4705  0.2305  0.425\n",
-       "test (9 topics)            0.6103  0.5633  0.3188  0.600"
+       "                      recall_1000    ndcg   Rprec    P_10\n",
+       "training (12 topics)       0.6693  0.5597  0.2825  0.4333\n",
+       "test (9 topics)            0.6292  0.5858  0.3580  0.7000"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
