--- a/python/trials/trials_general.ipynb
+++ b/python/trials/trials_general.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,17 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "topics_all = eval.get_topics('./topics/topics2017.xml')\n",
-    "qrels_all = eval.get_qrels('./gold-standard/abstracts.2017.qrels')"
+    "qrels_all = eval.get_qrels('./gold-standard/trials.2017.qrels')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,29 +79,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME TOPICS: 30 {'query_template': 'baseline.json', 'disease_tie_breaker': 0.5, 'gene_tie_breaker': 0.5, 'disease_boost': 1.5, 'gene_boost': 1}\n"
+      "RUN: FIXME TOPICS: 30 {'disease_boost': 1.5, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'gene_boost': 1, 'query_template': 'baseline.json'}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'P_10': 0.4633, 'Rprec': 0.2771, 'ndcg': 0.5223, 'recall_1000': 0.6104}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "full_run_df, params = eval.run(topics_all)"
+    "params = eval.get_default_params()\n",
+    "params['query_template'] = 'baseline.json'\n",
+    "full_run_df, params = eval.run(topics_all)\n",
+    "results, aggregated = eval.evaluate(qrels_all, full_run_df)\n",
+    "aggregated\n",
+    "#assert(aggregated['ndcg'] == 0.5338)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RUN: FIXME TOPICS: 30 {'disease_boost': 1.5, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'gene_boost': 1, 'query_template': 'baseline2.json'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'P_10': 0.4633, 'Rprec': 0.2771, 'ndcg': 0.5223, 'recall_1000': 0.6104}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "params = eval.get_default_params()\n",
+    "params['query_template'] = 'baseline2.json'\n",
+    "full_run_df, params = eval.run(topics_all)\n",
     "results, aggregated = eval.evaluate(qrels_all, full_run_df)\n",
-    "assert(aggregated['ndcg'] == 0.5338)"
+    "aggregated\n",
+    "#assert(aggregated['ndcg'] == 0.5338)"
    ]
   },
   {
